--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-		<title>{{ title }} | Project Dream Team</title>
+		<title>{{ title }} | laboratorios Fatec</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
@@ -64,7 +64,7 @@
 						 <li><a href="{{ url_for('auth.login') }}">Login</a></li>
 						 {% endif %}
 					 </ul>
-					 <p class="copyright text-muted small">Copyright © 2016. All Rights Reserved</p>
+					 <!-- <p class="copyright text-muted small">Copyright © 2019. All Rights Reserved</p> -->
 				 </div>
 			 </div>
 		 </div>
