--- a/app/templates/common/laboratorios/laboratorios.html
+++ b/app/templates/common/laboratorios/laboratorios.html
@@ -9,36 +9,40 @@
         <br />
         {{ utils.flashed_messages() }}
         <br />
-        <h1 style="text-align:center;">Laboratóros</h1>
-        <a href="{{ url_for('admin.add_usuario') }}" class="btn btn-default btn-lg">
+        <h1 style="text-align:center;">Laboratórios</h1>
+        {% if current_user.is_admin %}
+        <a href="{{ url_for('common.add_laboratorio') }}" class="btn btn-default btn-lg">
           <i class="fa fa-plus"></i>
           Adicionar laboratório
         </a>
+        {% endif %}
         <br />
         {% if laboratorios %}
         <hr class="intro-divider">
-        <div class="row">
-          {% for lab in laboratorios %}
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="card bg-light mb-3" style="max-width: 18rem;">
-              <div class="card-header">
-                <p>{{ lab.descricao }}</p>
-              </div>
-              <div class="card-body">
+        <div class="container">
+          <div class="row">
+            {% for lab in laboratorios %}
+            <div class="col-md-3 col-sm-6 col-xs-12">
+              <div class="panel panel-info bg-light">
+                <div class="panel-heading">
+                  <p class="panel-title">{{ lab.descricao }}</p>
+                </div>
                 <ul class="list-group">
                   <li class="list-group-item list-group-item-primary">Projetos indisponíveis</li>
-                  <a class="list-group-item list-group-item-primary" href="{{ url_for('admin.edt_usuario', lab=lab.id) }}">Insumos</a>
-                  <a class="list-group-item list-group-item-primary" href="{{ url_for('admin.edt_usuario', lab=lab.id) }}">Equipamentos</a>
-                  {% if usuario.is_admin %}
-                  <a class="list-group-item list-group-item-primary" href="{{ url_for('admin.edt_usuario', lab=lab.id) }}">
+                  <a class="list-group-item list-group-item-primary" href="{{ url_for('common.edt_laboratorio', lab=lab.id) }}">Insumos</a>
+                  <a class="list-group-item list-group-item-primary" href="{{ url_for('common.edt_laboratorio', lab=lab.id) }}">Equipamentos</a>
+                </ul>
+                {% if current_user.is_admin %}
+                <div class="panel-footer">
+                  <a class="list-group-item list-group-item-primary" href="{{ url_for('common.edt_laboratorio', lab=lab.id) }}">
                     <i class="fa fa-edit"></i> Editar laboratório
                   </a>
-                  {% endif %}
-                </ul>
+                </div>
+                {% endif %}
               </div>
             </div>
+            {% endfor %}
           </div>
-          {% endfor %}
         </div>
         {% endif %}
       </div>
