--- a/app/templates/home/dashboard.html
+++ b/app/templates/home/dashboard.html
@@ -8,8 +8,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-message">
-                    <h1>The Dashboard</h1>
-                    <h3>We made it here!</h3>
+                    <h1>Laboratórios Fatec</h1>
                     <hr class="intro-divider">
                     </ul>
                 </div>
