--- a/app/templates/admin/usuarios/usuarios.html
+++ b/app/templates/admin/usuarios/usuarios.html
@@ -9,15 +9,17 @@
         <br/>
         {{ utils.flashed_messages() }}
         <br/>
-        <h1 style="text-align:center;">Usuários</h1>
-        <a href="{{ url_for('admin.add_usuario') }}" class="btn btn-default btn-lg">
-          <i class="fa fa-plus"></i>
-          Adicionar usuário
-        </a>
+        <div class="center">
+          <h1 class="">Usuários</h1>
+          <a href="{{ url_for('admin.add_usuario') }}" class="btn btn-default btn-lg center">
+            <i class="fa fa-plus"></i>
+            Adicionar usuário
+          </a>
+        </div>
         <br />
         {% if usuarios %}
           <hr class="intro-divider">
-          <div class="center">
+          <div class="">
             <table class="table table-striped table-bordered">
               <thead>
                 <tr>
@@ -31,7 +33,7 @@
               {% for usuario in usuarios %}
                 {% if usuario.is_admin %}
                     <tr style="background-color: #aec251; color: white;">
-                        <td> <i class="fa fa-key"></i> Admin </td>
+                        <td> <i class="fa fa-key"></i> {{ usuario.denominacao }} {{ usuario.nome }} </td>
                         <td> N/A </td>
                         <td> N/A </td>
                         <td> -- </td>
