--- a/app/templates/home/admin_dashboard.html
+++ b/app/templates/home/admin_dashboard.html
@@ -8,8 +8,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-message">
-                    <h1>Admin Dashboard</h1>
-                    <h3>For administrators only!</h3>
+                    <h1>Dashboard</h1>
+                    <h3>Em construção!</h3>
                     <hr class="intro-divider">
                     </ul>
                 </div>
