--- a/app/templates/admin/usuarios/usuarios.html
+++ b/app/templates/admin/usuarios/usuarios.html
@@ -9,9 +9,9 @@
         <br/>
         {{ utils.flashed_messages() }}
         <br/>
-        <div class="center">
+        <div class="center" style="text-align:center;">
           <h1 class="">Usuários</h1>
-          <a href="{{ url_for('admin.add_usuario') }}" class="btn btn-default btn-lg center">
+          <a href="{{ url_for('admin.add_usuario') }}" class="btn btn-default btn-lg">
             <i class="fa fa-plus"></i>
             Adicionar usuário
           </a>
@@ -34,9 +34,22 @@
                 {% if usuario.is_admin %}
                     <tr style="background-color: #aec251; color: white;">
                         <td> <i class="fa fa-key"></i> {{ usuario.denominacao }} {{ usuario.nome }} </td>
+                        {% if current_user.id == usuario.id %}
+                        <td>{{ usuario.email }}</td>
+                        <td>
+                          0
+                        </td>
+                        <td>
+                          <a href="{{ url_for('admin.edt_usuario', id=usuario.id) }}" style="color: white;">
+                            <i class="fa fa-edit"></i> Editar
+                          </a>
+                        </td>
+                        {% else %} 
                         <td> N/A </td>
+                        <td> 0 </td>
                         <td> N/A </td>
-                        <td> -- </td>
+                        {% endif %}
+                        <!-- <td> -- </td> -->
                     </tr>
                 {% else %}
                     <tr>
