--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -6,10 +6,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-message">
-                    <h1>Project Dream Team</h1>
-                    <h3>The best company in the world!</h3>
-                    <hr class="intro-divider">
-                    </ul>
+                    <h1>Laboratórios Fatec</h1>
                 </div>
             </div>
         </div>
