Adicionado metodos de busca, paginação e contagem de registros.

--- a/app/templates/admin/usuarios/usuarios.html
+++ b/app/templates/admin/usuarios/usuarios.html
@@ -20,7 +20,7 @@
         {% if usuarios %}
           <hr class="intro-divider">
           <div class="">
-            <table class="table table-striped table-bordered">
+            <table class="table table-striped table-bordered findList">
               <thead>
                 <tr>
                   <th width="35%"> Nome </th>
