--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,9 +4,13 @@
 <head>
 		<title>{{ title }} | laboratorios Fatec</title>
 		<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+		<link type="text/css" rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
 		<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+		<script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 		<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
+		<script type="text/javascript" src="{{ url_for('static', filename='js/base.js') }}"></script>
 </head>
 <body>
 		<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
