--- a/app/templates/common/artefatos/artefatos.html
+++ b/app/templates/common/artefatos/artefatos.html
@@ -22,7 +22,7 @@
         {% if artefatos %}
           <hr class="intro-divider">
           <div class="">
-            <table class="table table-striped table-bordered">
+            <table class="table table-striped table-bordered findList">
               <thead>
                 <tr>
                   <th>Descrição</th>
