--- a/app/templates/common/insumos/insumos.html
+++ b/app/templates/common/insumos/insumos.html
@@ -22,7 +22,7 @@
         {% if insumos %}
           <hr class="intro-divider">
           <div class="">
-            <table class="table table-striped table-bordered">
+            <table class="table table-striped table-bordered findList">
               <thead>
                 <tr>
                   <th>Id</th>
