Adicionado função de editar artefatos.

--- a/app/templates/common/artefatos/artefato.html
+++ b/app/templates/common/artefatos/artefato.html
@@ -6,7 +6,7 @@
 {% block body %}
 <div class="content-section">
 	<div class="center">
-		{% if add_ism %}
+		{% if add_art %}
 			<h1>Adicionar Insumo</h1>
 		{% else %}
 			<h1>Editar Insumo</h1>
