--- a/app/templates/common/laboratorios/laboratorios.html
+++ b/app/templates/common/laboratorios/laboratorios.html
@@ -31,8 +31,8 @@
                 </div>
                 <ul class="list-group">
                   <li class="list-group-item list-group-item-primary">Projetos indisponíveis</li>
-                  <a class="list-group-item list-group-item-primary" href="{{ url_for('common.list_insumos', lab=lab.id) }}">Insumos</a>
-                  <a class="list-group-item list-group-item-primary" href="{{ url_for('common.list_artefatos', lab=lab.id) }}">Artefatos</a>
+                  <a class='list-group-item list-group-item-{{lab.insumos | verify_insumos}}' href="{{ url_for('common.list_insumos', lab=lab.id) }}">Insumos</a>
+                  <a class="list-group-item list-group-item-{{lab.artefatos | verify_artefatos}}" href="{{ url_for('common.list_artefatos', lab=lab.id) }}">Artefatos</a>
                 </ul>
                 {% if current_user.is_admin %}
                 <div class="panel-footer">
